--- a/modulo_2/ex009/style.css
+++ b/modulo_2/ex009/style.css
@@ -1,24 +1,15 @@
-h1{
+h1{ /* box-level */
     background-color: lightgray;
     height: 300px;
     width: 300px;
-    border-width: 10px;
-    border-style: solid;
-    border-color: blue;
     
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
+    border: 10px solid blue;
+    padding: 10px 20px;
+    margin: 10px auto 40px auto;
+    outline: 5px dashed salmon;
 }
 
-a{
-    border-width: 10px;
-    border-style: solid;
-    border-color: red;
-
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
+a{ /* inline-lvel */
+    border: 10px solid red;
+    padding: 10px;
 }
