--- a/modulo_4/ex004/mq002/estilos/paisagem.css
+++ b/modulo_4/ex004/mq002/estilos/paisagem.css
@@ -1,3 +1,11 @@
 @charset "UTF_8"; 
 
 /*Aparelho em landscape*/
+
+body{
+    background-image: url(../imagens/cev-landscape.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left bottom;
+    
+}
