--- a/modulo_4/ex004/mq002/estilos/retrato.css
+++ b/modulo_4/ex004/mq002/estilos/retrato.css
@@ -1,3 +1,10 @@
 @charset "UTF_8"; 
 
 /*Aparelho em portrait*/
+
+body{
+    background-image: url("../imagens/cev-portrait.jpg");
+    background-position: left bottom;
+    background-size: contain;
+
+}
