--- a/modulo_4/ex004/mq002/estilos/style.css
+++ b/modulo_4/ex004/mq002/estilos/style.css
@@ -1,3 +1,25 @@
 @charset "UTF_8"; 
 
 /*Configurações gerais*/
+
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body{
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-image: url(../imagens/cev-landscape.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+h1{
+    color: white;
+    text-shadow: 2px 2px 0px #0d1d97;
+    padding: 10px;
+}
