--- a/modulo_4/ex004/mq004/estilos/media-query.css
+++ b/modulo_4/ex004/mq004/estilos/media-query.css
@@ -2,3 +2,69 @@
 
 /* Todas as demais mídias */
 
+/* Typical Device Breakpoints*
+-------------------------
+Pequenas Telas: até 600px
+
+Celular: até 600px 768px
+Tablet: 768px até 992px
+Desktop: 992px até 1200px
+-------------------------
+Grandes telas:
+*/
+
+
+@media print{
+    *{
+        font-family: 'Courier New', Courier, monospace;
+    }
+    
+    body{
+        background-image: url('../imagens/back-print.jpg'); /* Desnecessario*/
+    }
+
+    main{
+        width: 90vw;
+        border: 2px solid black;
+    }
+
+    main h1{
+        text-shadow: none;
+        color: black;
+    }
+
+    main::after{
+        content: 'Essa tela de impressao foi desenvolvida por Lucas Bonfim';
+        text-decoration: underline;
+    }
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 992px){/*Tablet*/
+    body{
+        background-image: url('../imagens/back-tablet.jpg');
+    }
+    #phone{ display: none;}
+    #tablet{ display: block;}
+}
+
+@media screen and (min-width: 993px) and (max-width: 1199px){/*Desktop*/
+    body{
+        background-image: url('../imagens/back-pc.jpg');
+    }
+    #phone{ display: none;}
+    #desktop{display: block;}
+}
+
+@media screen and (min-width: 1200px){/*Grandes Telas*/
+    body{
+        background-image: url('../imagens/back-tv.jpg');
+    }
+
+    main{
+        width: 700px;
+    }
+
+    #phone{ display: none;}
+    #tv{display: block;}
+}
