--- a/Grid/css/style.css
+++ b/Grid/css/style.css
@@ -9,18 +9,25 @@ body{
     font-size: 40px;
 }
 
+.container{
+    max-width: 1200px;
+    margin: 0;
+    overflow-x: hidden;
+}
+
 .grid{
-    max-width: 700px;
-    margin: 0 auto;
+    margin-right: -30px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-    grid-template-rows: repeat(2fr 1fr 3fr);
-    gap: 30px;
+    /*gap: 30px;*/
+
 }
 
 .grid div{
     background-color: gainsboro;
     min-height: 100px;
+    margin-right: 30px;
+    margin-bottom: 30px;
 }
 
 .grid div:nth-child(5){
